Mon Nov 15 21:47:17 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy, fairy.conf.tmpl, logger.rb, conf.rb: ログローテーションに
	  対応(REQ#154)
	* Makefile: ちょっと変更

Sat Nov 13 00:51:10 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-inject.rb: injectで可換でないときにも対応(REQ#132)

Tue Nov  2 18:37:01 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* README: Copyright追加(REQ#289対応)

Tue Nov  2 17:34:25 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* LICENSE: 追加(REQ#288)
	* README: fairy.gemspecのdescription修正に伴う修正
	* fairy.gemspec: description再修正
	* spec/fairy8_spec.rb: REQ#284に伴う修正

Tue Nov  2 15:14:06 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy, base-app.rb: BUG#286対応
	* tools/cap_recipe/Capfile: fairyをインストールするタスク追加対応
	  (REQ#287)
	* Makefile: bin/fairyタグ修正

Tue Nov  2 13:33:41 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.gemspec: description修正
	* Makefile: pushタグの依存関係修正

Mon Nov  1 22:15:30 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Makefile: doc/programming-interface.html タグを追加
	* fairy.gemspec: summary, description修正

Sun Oct 31 18:00:24 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* block-source.rb: BUG#285対応

Sun Oct 31 17:36:18 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* seg-split.rb, c-seg-split.rb, p-seg-split.rb: splitをseg_splitに
	 改名(REQ284)

Sun Oct 31 17:20:07 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* c-output-varray.rb, varray.rb: BUG#283対応

Fri Oct 29 20:20:16 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Makefile, fairy, conf.rb: FAIRY_HOMEを自動推測するようにした(REQ281対応)

Fri Oct 29 18:32:21 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* sample/wordcount.rb: typo

Fri Oct 29 18:16:18 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* bin/fairy, base-app.rb, fairy-BODY.templ: BUG#282対応

Fri Oct 29 18:13:37 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* README, fairy.gemspec: 作成(REQ#281)対応

Fri Oct 29 15:22:56 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* doc/programming-interface.{html,rd},