@@ -20,6 +20,7 @@ module Fairy
     def initialize(fairy, opts=nil)
       super
 
+      @old_vfile = nil
       @vfile = nil
     end
 
@@ -28,6 +29,10 @@ module Fairy
     end
 
     def output(vfn)
+      if File.exists?(vfn)
+	@old_vfile = VFile.vfile(vfn)
+      end
+
       @descripter = vfn
       @vfile = VFile.new
       @vfile.vfile_name = vfn
@@ -39,8 +44,21 @@ module Fairy
     def input=(job)
       @input = job
       backend.input=job.backend
-
       backend.wait_all_output_finished
+
+      if @old_vfile
+	rmfiles = @old_vfile.real_file_names.zip(@vfile.real_file_names).select{|n1, n2| n1 != n2}.map{|n1, n2| n1}
+	if !rmfiles.empty?
+	  rm = @fairy.exec(rmfiles).map(%{|uri|
+             path = URI(uri).path
+             begin
+               File.unlink(path)
+             rescue
+             end
+             }, :BEGIN => %{require "uri"})
+	  rm.done
+	end
+      end
       @vfile.create_vfile
     end
   end
